# chronicle

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.forgejo/workflows/: ci.yml  fuzz.yml  release.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  release.yml
.ralphi/: .last-branch  config.yaml  prd.json  progress.txt  runtime-state.json
.ralphi/archive/2026-03-30-audit-fixes/: prd.json  progress.txt
.ralphi/archive/2026-03-30-initial-delivery/: prd.json
.ralphi/archive/2026-04-03-l3-canon-hardening/: prd.json
.ralphi/archive/2026-04-03-status-improvements/: prd.json  progress.txt
.ralphi/archive/2026-04-03-sync-perf-remaining/: prd.json
docs/: 001-architecture.md  002-development-guide.md  003-documentation-standards.md
docs/references/: 001-encryption.md  002-storage-backends.md  003-threat-model.md
docs/research/: 001-codebase-audit.md  002-sync-performance-investigation.md  003-sync-performance-validation.md
docs/specs/: 001-initial-delivery.md  002-status-improvements.md  003-l3-canonicalization-hardening.md  004-doctor-command.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_roundtrip.rs
src/: lib.rs  main.rs  materialize_cache.rs  sync_state.rs
src/agents/: mod.rs
src/canon/: fields.rs  levels.rs  mod.rs
src/cli/: mod.rs
src/config/: machine_name.rs  mod.rs  schema.rs
src/doctor/: mod.rs
src/errors/: mod.rs  ring_buffer.rs
src/git/: commit.rs  fetch_push.rs  mod.rs
src/merge/: entry.rs  mod.rs  set_union.rs
src/scan/: mod.rs
src/scheduler/: cron.rs  mod.rs
tests/: integration.rs
