[package]
name = "chronicle"
version = "0.6.0"
edition = "2021"
description = "Bidirectional sync for AI coding agent session history across machines"
license = "MIT"
authors = ["Brad Campbell"]
repository = "https://github.com/geekmuse/chronicle"
homepage = "https://github.com/geekmuse/chronicle"
documentation = "https://github.com/geekmuse/chronicle#readme"
readme = "README.md"
keywords = ["sync", "ai", "sessions", "git", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
git2 = { version = "0.20.4", features = ["vendored-openssl"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
strip = true
lto = true
