[package]
name = "chronicle-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.chronicle]
path = ".."

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }

[workspace]
members = ["."]
